--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -98,11 +98,13 @@
 
 	.requirement-row-title {
 		font-weight: 700;
+
 	}
 }
 
 .requirement-row-title {
-	font-size: 2em;
+	font-size: 2.3em;
+  padding-left: 1vw;
 }
 
 .requirement-row-excerpt {
@@ -132,57 +134,126 @@
   text-align: center;
 }
 
-.opportunity-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: space-between;
-  width: 100%;
-}
 
-.opportunity-info-row {
-  display: flex;
-  border-radius: 1rem;
 
-  @include respond-to(handhelds) {
-    flex-direction: column;
+.opportunity-container {
+  .jbh-grid-container {
+    grid-template-columns: 65% 35%;
+
+    @include respond-to(handhelds) {
+      grid-template-columns: 100%;
+    }
   }
 }
 
-.follower-count {
-  display: flex;
-  align-items: center;
-  font-size: 1.0em;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  height: 8vh;
-  margin-right: 25px;
 
-  @include respond-to(handhelds){
-    height: 6vh;
-    margin-right: 0;
-  };
+
+.opportunity-info {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 50% 50%;
+  height: auto;
 }
 
-.follower-count-span {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: .8em;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin: 0 .4vw;
-  padding: 1vh;
-  background-color: $darkgrey;
-  min-height: 4vh;
-  min-width: 4vh;
-  border-radius: 1rem;
-  color: #fff;
-
-  @include respond-to(handhelds){
-    margin-left: auto;
-  };
+.opportunity-info-left {
+  grid-column: 1;
+  border-right: 1px solid $lightgrey;
+  text-align: center;
+  margin-bottom: 2vh;
 }
+
+.opportunity-info-right {
+  grid-column: 2;
+  text-align: center;
+}
+
+.opportunity-info-container {
+
+}
+
+.opportunity-info-row {
+  font-size: 1.2em;
+  color: $midgrey;
+  @include respond-to(handhelds) {
+    font-size: .95em;
+  }
+
+  .opportunity-info-row-data {
+    font-size: 1.7em;
+    color: black;
+    @include respond-to(handhelds) {
+      font-size: 1.5em;
+    }
+  }
+}
+
+.opportunity-description {
+  text-align: center;
+  font-size: 1.3em;
+  padding-top: 3vh;
+  border-top: 1px solid $lightgrey;
+}
+// .opportunity-info-row {
+//   display: flex;
+//   border-radius: 1rem;
+
+//   @include respond-to(handhelds) {
+//     flex-direction: column;
+//   }
+// }
+
+.opportunity-buttons-container {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.opportunity-buttons-label {
+  font-size: 2em;
+  color: $darkgrey;
+  margin-bottom: 1vh;
+
+  @include respond-to(handhelds) {
+    margin-top: 4vh;
+  }
+}
+
+
+
+// .follower-count {
+//   display: flex;
+//   align-items: center;
+//   font-size: 1.0em;
+//   text-transform: uppercase;
+//   letter-spacing: 2px;
+//   height: 8vh;
+//   margin-right: 25px;
+
+//   @include respond-to(handhelds){
+//     height: 6vh;
+//     margin-right: 0;
+//   };
+// }
+
+// .follower-count-span {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   font-size: .8em;
+//   text-transform: uppercase;
+//   letter-spacing: 2px;
+//   margin: 0 .4vw;
+//   padding: 1vh;
+//   background-color: $darkgrey;
+//   min-height: 4vh;
+//   min-width: 4vh;
+//   border-radius: 1rem;
+//   color: #fff;
+
+//   @include respond-to(handhelds){
+//     margin-left: auto;
+//   };
+// }
 
 .post-container {
   padding: 2vh;
