--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -1,75 +1,96 @@
-<div class="opportunity-header">
-  <div class="opportunity-info-summary">
-    <h1 class="opportunity-title"> <%= @opportunity.title %> </h1>
-  </div>
-  <div class="opportunity-info">
-    <div class="opportunity-info-row">
-      <span class="follower-count">Created By <span class="follower-count-span"><%= @opportunity.user.username %></span></span>
-      <span class="follower-count">Category <span class="follower-count-span black"><%= @opportunity.category_title %></span></span>
-      <span class="follower-count">Target Completion <span class="follower-count-span">  <%= @opportunity.target_completion_date %></span></span>
-      <span class="follower-count">
-        <%= link_to 'Followers', opportunities_followers_path(:id => @opportunity.id), data: { modal: true } %>
-        <span class="follower-count-span info"><%= @opportunity.follower_count %></span>
-      </span>
-      <span class="follower-count">Volunteers <span class="follower-count-span info"><%= @opportunity.volunteer_count %> / <%= @opportunity.volunteers_required %></span></span>
-    </div>
-    <p><%= @opportunity.description %></p>
-  </div>
+<div class="jbh-standard-title">
+  <%= @opportunity.title %>
 </div>
-<div class="tab">
-  <div class="opportunity-tab-links">
-    <button class="tablinks hp" onclick="openTab(event, 'opportunity-requirements-tab')" id="defaultOpen">Requirements and Progress</button>
-    <button class="tablinks hp" onclick="openTab(event, 'opportunity-info-tab')">Discussion</button>
-  </div>
-</div>
-<!-- Tab content -->
-<div id="opportunity-info-tab" class="tabcontent">
-  <div class="posts-container">
-    <div class="tab-header d-flex align-items-center">
-      <h2 class="tab-heading"> Posts </h2>
+<div class="opportunity-container">
+  <div class="jbh-grid-container">
+    <div class="jbh-grid-first">
+      <div class="opportunity-info">
+        <div class="opportunity-info-left opportunity-info-container">
+          <div class="opportunity-info-row">Created By: 
+            <span class="opportunity-info-row-data"><%= @opportunity.user.username %></span>
+          </div>
+          <div class="opportunity-info-row">Category: 
+            <span class="opportunity-info-row-data black"><%= @opportunity.category_title %></span>
+          </div>
+          <div class="opportunity-info-row">Target Completion Date:
+            <span class="opportunity-info-row-data">  <%= @opportunity.display_date %></span>
+          </div>
+        </div>
+        <div class="opportunity-info-right opportunity-info-container">
+          <div class="opportunity-info-row">
+            <span class="opportunity-info-row-data">
+              <%= link_to "Followers: #{@opportunity.follower_count}", opportunities_followers_path(:id => @opportunity.id), data: { modal: true } %>
+            </span>
+          </div>
+          <div class="opportunity-info-row">Volunteers 
+            <span class="opportunity-info-row-data info"><%= @opportunity.volunteer_count %> / <%= @opportunity.volunteers_required %></span>
+          </div>
+        </div>
+      </div>
+      <div class="opportunity-description"><%= @opportunity.description %></div>
     </div>
-    <div class="post-list">
-      <% if @opportunity.posts.size > 0 %>
-        <% @opportunity.posts.each do |post| %>
-          <% post_user = User.find(post.user_id) %>
-          <div class="post-container">
-            <a href="/posts/<%= post.id %>" class="post-link">
-              <p class="post-title"><%= post.title %></p>
-              <p class="post-author"><%= post_user.username %><span> on <%= post.created_at.strftime('%m/%d/%Y') %></span></p>
-            </a>
+    <div class="jbh-grid-second">
+      <div class="opportunity-buttons-container">
+        <div class="opportunity-buttons-label">
+          Options
+        </div>
+        <% if !@role && current_user %>
+          <%= link_to 'Follow Opportunity', opportunities_follow_path(opportunity_id: @opportunity.id), class: "btn btn-outline-primary follow-opportunity-button" %>
+        <% elsif @role&.level == 4 %>
+          <%= link_to 'Unfollow Opportunity', opportunities_unfollow_path(opportunity_id: @opportunity.id), class: "btn btn-outline-primary unfollow-opportunity-button" %>
+        <% elsif @role&.level == 2 %>
+          <%= link_to 'Step down as Supervisor', opportunities_demote_user_path(opportunity_id: @opportunity.id, target_user_id: @role.user_id), class: "btn btn-outline-primary step-down-button" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="tab">
+    <div class="opportunity-tab-links">
+      <button class="tablinks hp" onclick="openTab(event, 'opportunity-requirements-tab')" id="defaultOpen">Requirements and Progress</button>
+      <button class="tablinks hp" onclick="openTab(event, 'opportunity-info-tab')">Discussion</button>
+    </div>
+  </div>
+  <!-- Tab content -->
+  <div id="opportunity-info-tab" class="tabcontent">
+    <div class="posts-container">
+      <div class="tab-header d-flex align-items-center">
+        <h2 class="tab-heading"> Posts </h2>
+      </div>
+      <div class="post-list">
+        <% if @opportunity.posts.size > 0 %>
+          <% @opportunity.posts.each do |post| %>
+            <% post_user = User.find(post.user_id) %>
+            <div class="post-container">
+              <a href="/posts/<%= post.id %>" class="post-link">
+                <p class="post-title"><%= post.title %></p>
+                <p class="post-author"><%= post_user.username %><span> on <%= post.created_at.strftime('%m/%d/%Y') %></span></p>
+              </a>
+            </div>
+          <% end %>
+        <% else %>
+          <div class="no-posts-container">
+            There is currently no discussion about this volunteer opportunity. If you have a comment or question, add it!
           </div>
         <% end %>
-      <% else %>
-        <div class="no-posts-container">
-          There is currently no discussion about this volunteer opportunity. If you have a comment or question, add it!
-        </div>
-      <% end %>
-      <% if current_user && @role %>
-        <div class="add-tabitem-button">
-          <%= link_to 'New Post', new_post_path(:opportunity => {:id => @opportunity.id}), class: "btn btn-success btn-lg add-tabitem-btn", data: { modal: true } %>
-        </div>
-      <% end %>
+        <% if current_user && @role %>
+          <div class="add-tabitem-button">
+            <%= link_to 'New Post', new_post_path(:opportunity => {:id => @opportunity.id}), class: "btn btn-success btn-lg add-tabitem-btn", data: { modal: true } %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
-<div id="opportunity-requirements-tab" class="tabcontent">
-  <div class="d-flex align-items-center">
-    <h2 class="tab-heading">Requirements</h2>
-  </div>
-  <% @requirements.each do |requirement| %>
-    <%= render 'requirement_row', requirement: requirement %>
-  <%end%>
-  <% if @is_mod %>
-    <div class="add-tabitem-button">
-      <%= link_to 'New Requirement', new_requirement_path(:requirement => {:opportunity_id => @opportunity.id, :defined => @opportunity.defined, :target_date => @opportunity.target_completion_date}), class: 'btn btn-success btn-lg add-tabitem-btn', data: { modal: true } %>
+  <div id="opportunity-requirements-tab" class="tabcontent">
+    <div class="d-flex align-items-center">
+      <h2 class="tab-heading">Requirements</h2>
     </div>
-  <% end %>
+    <% @requirements.each do |requirement| %>
+      <%= render 'requirement_row', requirement: requirement %>
+    <%end%>
+    <% if @is_mod %>
+      <div class="add-tabitem-button">
+        <%= link_to 'New Requirement', new_requirement_path(:requirement => {:opportunity_id => @opportunity.id, :defined => @opportunity.defined, :target_date => @opportunity.target_completion_date}), class: 'btn btn-success btn-lg add-tabitem-btn', data: { modal: true } %>
+      </div>
+    <% end %>
+  </div>
 </div>
-<% if !@role && current_user %>
-  <%= link_to 'Follow Opportunity', opportunities_follow_path(opportunity_id: @opportunity.id), class: "btn btn-outline-primary follow-opportunity-button" %>
-<% elsif !@role %>
-<% elsif @role.level == 4 %>
-  <%= link_to 'Unfollow Opportunity', opportunities_unfollow_path(opportunity_id: @opportunity.id), class: "btn btn-outline-primary unfollow-opportunity-button" %>
-<% elsif @role.level == 2 %>
-  <%= link_to 'Step down as Supervisor', opportunities_demote_user_path(opportunity_id: @opportunity.id, target_user_id: @role.user_id), class: "btn btn-outline-primary step-down-button" %>
-<% end %>
