--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -183,9 +183,17 @@
   border-radius: 2px;
   box-shadow: rgba(0, 0, 0, 0.6) 0px 2px 4px 0;
 
+  @include respond-to(handhelds) {
+    padding: 5px;
+    margin: 5px;
+  }
+
   & h3 {
     color: #666;
     margin: 0;
+    @include respond-to(handhelds) {
+      font-size: 1.1em;
+    }
   }
 }
 
@@ -196,12 +204,16 @@
 
   @include respond-to(handhelds) {
     left: 0;
+    margin-top: 1vh;
   }
 }
 
 .filter.show-filter {
   min-height: 20vh;
 
+  & h3 {
+    margin-bottom: 1vh;
+  }
   @include respond-to(handhelds) {
     width: 95%;
   }
@@ -220,6 +232,10 @@
 .current-zip.floater {
   right: 0;
   margin-top: 3vh;
+
+  @include respond-to(handhelds) {
+    margin-top: 1vh;
+  }
 }
 
 .zip-floater {
