--- a/app/views/requirements/new.html.erb
+++ b/app/views/requirements/new.html.erb
@@ -1,4 +1,2 @@
-<div class="main container modal-inner">
-  <h1>New Requirement</h1>
-  <%= render 'form', requirement: @requirement %>
-</div>
+<div class="jbh-standard-title">New Requirement</div>
+<%= render 'form', requirement: @requirement %>
