--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,2 @@
-<div class="main container modal-inner">
-  <h1>New Post</h1>
-  <%= render 'form', post: @post %>
-</div>
+<div class="jbh-standard-title">New Post</div>
+<%= render 'form', post: @post %>
