--- a/app/views/requirements/_form.html.erb
+++ b/app/views/requirements/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@requirement, remote: request.xhr?, html: { data: { modal: true } }) do |f| %>
+<%= simple_form_for(@requirement, remote: request.xhr?) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
   <div class="form-inputs">
@@ -23,10 +23,6 @@
     <div class="form-group">
       <%= f.label :category %>
       <%= f.select :category, @categories.map.with_index {|cat, index| [cat, index] }, {}, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :subcategory %>
-      <%= f.select :subcategory, @sub_categories[0].map.with_index {|sub, index| [sub[:title], index]}, {}, class: "form-control" %>
     </div>
     <%= f.input :volunteers_required, placeholder: "How many people do you need?" %>
     <div class="form-group">
