completion works, gotta put the completion page logic together

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,4 +15,5 @@
     <%= f.hidden_field :postable_type, :value => 'Requirement' %>
   <% end %>
   <%= f.button :submit, class: "btn btn-primary" %>
+  <% binding.pry %>
 <% end %>
