oppo show page is so goddamn close

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -36,7 +36,7 @@ h1 {
   margin-bottom: 3vh;
   padding-top: 2vh;
   color: $darkgrey;
-  border-bottom: 2px solid $lightgrey;
+  //border-bottom: 2px solid $lightgrey;
   @include respond-to(handhelds) {
     font-size: 2em;
   }
