--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -4,6 +4,22 @@
 @import 'theme.scss';
 @import 'grid.scss';
 
+
+.opportunity-show-page {
+  @include respond-to(handhelds) {
+
+    .opportunity-tab-links {
+      padding-top: 0px;
+      border-bottom: 1px solid $lightgrey;
+    }
+    .tab button.hp {
+      margin-left: 0vw;
+      border-radius: 0px;
+
+    }
+  }
+}
+
 .opportunity-title {
   text-transform: none;
   font-weight: 700;
@@ -123,10 +139,20 @@
 //   width: 100% !important;
 // }
 
+.add-tabitem-button {
+  text-align: center;
+  margin-top: 2vh;
+}
+
+
 .add-tabitem-btn {
-  width: 100%;
-  height: 1.8em;
-  font-size: 2em !important;
+  width: 80vw;
+  margin-left: auto;
+  margin-right: auto;
+  height: 2.2em;
+  font-size: 2.2em !important;
+  font-weight: 650 !important;
+  text-transform: uppercase;
 }
 
 .tab-heading {
@@ -142,11 +168,19 @@
 
     @include respond-to(handhelds) {
       grid-template-columns: 100%;
-      .jbh-grid-second {
-        display: none;
+
+      .jbh-grid-first {
+        margin-right: 0vw;
       }
+      // .jbh-grid-second {
+      //   display: none;
+      // }
 
       // .mobile-
+    }
+
+    .jbh-grid-second {
+      margin-left: 0vw;
     }
   }
 }
@@ -197,6 +231,11 @@
   font-size: 1.3em;
   padding-top: 3vh;
   border-top: 1px solid $lightgrey;
+
+  @include respond-to(handhelds) {
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
 }
 // .opportunity-info-row {
 //   display: flex;
@@ -207,20 +246,65 @@
 //   }
 // }
 
+// .opportunity-requirements-tab {
+//   .jbh-grid-container {
+//     grid-template-columns: 50% 50% !important;
+//   }
+// }
+
+.jbh-grid-second {
+  text-align: center;
+}
+
+.opportunity-mapimage-container {
+  text-align: center;
+  width: auto;
+  max-width: 100%;
+}
+
+.opportunity-mapimage {
+  max-width: 70vw;
+  margin-left: auto;
+  margin-right: auto;
+  @include respond-to(handhelds) {
+    border: 2px solid $midgrey;
+  }
+}
+
 .opportunity-buttons-container {
   width: 100%;
   height: 100%;
   text-align: center;
 }
 
+.options-btn-group {
+  height: auto;
+  text-transform: uppercase;
+  .options-btn-group-btn {
+    height: auto;
+    font-size: 1.4em;
+    border: 1px solid black;
+
+  }
+}
+
 .opportunity-buttons-label {
   font-size: 2em;
-  color: $darkgrey;
+  color: black;
   margin-bottom: 1vh;
+  text-transform: uppercase;
+  width: auto;
+  border-bottom: 1px solid $lightgrey;
 
   @include respond-to(handhelds) {
     margin-top: 4vh;
   }
+}
+
+.see-followers-btn {
+  height: 5vh;
+  display: flex;
+  vertical-align: middle;
 }
 
 
